app/styles/main.scss
$icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/bootstrap/";
// bower:scss
@import "bootstrap-sass-official/assets/stylesheets/_bootstrap.scss";
// endbower
// color scheming

$colorSet1: #fae596;
$colorSet2: #3fb0ac;
$colorSet3:rgb(23,62,67);
$colorSet4: #dddfd4;

.browsehappy {
  margin: 0.2em 0;
  background: #ccc;
  color: #000;
  padding: 0.2em 0;
}

body {
  padding: 0;
  font-family: sans-serif;
  font-size: 1.5em;
  line-height:1.6;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing,
.footer {
  padding-left: 15px;
  padding-right: 15px;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;
  margin-bottom: 10px;
  height:200px;

  /* Make the masthead heading the same height as the navigation */
  h3 {
    margin-top: 0;
    margin-bottom: 0;
    line-height: 40px;
    padding-bottom: 19px;
  }
}

/* Custom page footer */
.footer {
  padding-top: 19px;
  color: #777;
  border-top: 1px solid #e5e5e5;
}

.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message and sign up button */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;

  .btn {
    font-size: 21px;
    padding: 14px 24px;
  }
}

/* Supporting marketing content */
.marketing {
  margin: 40px 0;

  p + h4 {
    margin-top: 28px;
  }
}
html, body {
  margin: 0;
  padding: 0;
  background: #ebebeb;
}
body, button {
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
}
h1 {
  padding-top: 50px;
}
img {
  max-width: 100%;
}
nav {
  position: fixed;
  z-index: 1;
  top: 0;
  left: 0;
  right: 0;
  background: #fff;
  background: rgba(255, 255, 255, 0.8);
}
nav li, nav ul {
  list-style: none;
  margin: 0;
  padding: 0;
  text-align: center
}
nav li, nav a {
  display: inline-block;
}
nav a {
  padding: 20px;
  color: #333;
  text-decoration: none;
}
a:hover {
  background: #fff;
}
a.active {
  background: $colorSet1;
  color: #fff;
}
.wrap {
  position: relative;
  max-width: 1000px;
  margin: 0 auto;
  padding: 50px 20px;
}
section {
  padding: 0;
}
footer {
  text-align: center;
}
button {
  font-size: 18px;
  border: 0;
  padding: 15px 30px;
  background: #00AC7F;
  color: #fff;
  cursor: pointer;
}

// ADDED AUTHOR CSS

#about{
   background-color: $colorSet4;
   padding: 150px 0 150px 0;
 }
#contact{
  padding: 30px 0 50px 0;
  background-color: $colorSet3;
  color: white;
}

//input.ng-invalid.ng-touched {
//  border: 1px solid #FF0000;
//}
//input.ng-valid.ng-touched {
//  border: 1px solid #00A000;
//}
//.ng-invalid .btn{
//  background-color: #0d3349;
//}
//.error{
//  color: #FF0000;
//  padding-bottom: 5px;
//}
.col-lg-6, .col-lg-12{
  padding-left:0px;
}

[md-header-picture] {
  position: relative;
  width:100%;
  height:0; /* Simple trick to keep a 16:9 ratio on your background image (height=0;padding-bottom=56.25%) */
  padding-bottom: 56.25%;
  overflow:hidden;
  background-size:160%; /* You can override this value if your picture has a weird ratio */
  background-position:50% 50%;
}

[scroll] {
  position:fixed;
  top:0;
}

//slide show images Still need to convert to Sass mixin

#tech-slideshow {
  height: 200px;
  position: relative;
  overflow: hidden;
}
#tech-slideshow > div {
  height: 200px;
  width: 2200px;
  background: url(../images/slideshow.jpg);
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;

  -moz-transition:  opacity 0.5s ease-out;
  -o-transition: opacity 0.5s ease-out;
  -webkit-transition: opacity 0.5s ease-out;
  -ms-transition: opacity 0.5s ease-out;

  /* Slow */
  -webkit-animation: moveSlideshow 60s linear infinite;
  -moz-animation:    moveSlideshow 60s linear infinite;

  -webkit-transform: translate3d(0,0,0); /* Performance */

}

@-webkit-keyframes moveSlideshow {
  0%   {
    -webkit-transform: translateX(0);
    -moz-transform:    translateX(0);
    -ms-transform:     translateX(0);
    -o-transform:      translateX(0);
    transform:         translateX(0);
  }
  100% {
    -webkit-transform: translateX(-1684px);
    -moz-transform:    translateX(-1684px);
    -ms-transform:     translateX(-1684px);
    -o-transform:      translateX(-1684px);
    transform:         translateX(-1684px);
  }
}
@-moz-keyframes moveSlideshow {
  0%   {
    -webkit-transform: translateX(0);
    -moz-transform:    translateX(0);
    -ms-transform:     translateX(0);
    -o-transform:      translateX(0);
    transform:         translateX(0);
  }
  100% {
    -webkit-transform: translateX(-1684px);
    -moz-transform:    translateX(-1684px);
    -ms-transform:     translateX(-1684px);
    -o-transform:      translateX(-1684px);
    transform:         translateX(-1684px);
  }
}



/* I made a simple scale animation on float action button during scroll */

.main-fab {
  position:absolute;
  left: calc(100% - 90px);
  z-index: 20;
  transform:scale(1,1);
  transition: transform .1s ease-out;
}

.main-fab.hide {
  transform:scale(0,0);
  transition: transform .1s ease-out;
}

/* Lines of code below are just here to get a better aspect but optionnal */

.md-tools {
  width: auto;
}

.muted {
  color: #bbb;
  font-size: inherit;
  font-weight: 700;
  text-align: left;
}

.md-tile-left {
  margin-right:0!important;
  padding-left:24px;
  color: $colorSet3;
}
#temp-style{
  background-color: $colorSet3;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  .container {
    max-width: 730px;
  }

  /* Remove the padding we set earlier */
  .header,
  .marketing,
  .footer {
    padding-left: 0;
    padding-right: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

.contact-hyperlink{
  text-decoration: none;
  color: black;
}

.contact-hyperlink:hover{
  background-color: transparent;
  text-decoration: none;
  color:$colorSet3;
}

